Fixed spacing

--- a/TearSheets/project/style.css
+++ b/TearSheets/project/style.css
@@ -3,6 +3,10 @@
     src: url() format("truetype");
 }
 
+body {
+    background-color: #FBFBFB; 
+}
+
 p {
     color: grey;
 }
@@ -194,6 +198,7 @@ textarea:focus, input:focus{
 
 .secondPageNavbar {
     border-bottom: 1px solid lightgrey; 
+    background-color: white; 
 }
 
 .subNavbarA {
@@ -221,6 +226,7 @@ h2 {
     width: 100%;
     padding: 0; 
     border-top: 1px solid lightgrey;
+    background-color: white;
 }
 
 .footerNavbarButton {
@@ -237,4 +243,12 @@ h2 {
     border-radius: 5px;
     text-transform: uppercase;
     letter-spacing: 1px;
+}
+
+.gigantic {
+    height: 50%; 
+    width: 80%;
+    margin-left: 10%; 
+    margin-right: 10%; 
+    padding: 0;
 }
